--- a/src/assets/style/global.css
+++ b/src/assets/style/global.css
@@ -1,12 +1,31 @@
-*,
-html,
-body {
+* {
   padding: 0;
   margin: 0;
+  outline: none;
+}
+html,
+body {
+  min-height: 100vh;
+  background: rgba(203, 242, 144, 0.2);
+}
+ul,
+li,
+ol {
+  list-style: none;
+}
+body {
+  padding: 100px 0;
+  box-sizing: border-box;
+}
+.col-2 {
+  width: 16.66666667%;
 }
 .col-3 {
   width: 25%;
 }
 .col-9 {
   width: 75%;
+}
+.col-10 {
+  width: 83.33333333%;
 }
