feat:添加文本长度控制

--- a/src/assets/style/global.less
+++ b/src/assets/style/global.less
@@ -32,5 +32,9 @@ body {
   width: 10/12 * 100%;
 }
 
+.col-12 {
+  width: 100%;
+}
+
 @keyboard-bg-color: #dfd9d9;
 @border-style: 1px solid rgba(0, 10, 20, 0.1);
