--- a/src/assets/style/global.css
+++ b/src/assets/style/global.css
@@ -18,7 +18,7 @@ body {
   box-sizing: border-box;
 }
 .col-2 {
-  width: 16.66666667%;
+  width: 2/12 * 100%;
 }
 .col-3 {
   width: 25%;
@@ -27,5 +27,8 @@ body {
   width: 75%;
 }
 .col-10 {
-  width: 83.33333333%;
+  width: 10/12 * 100%;
+}
+.col-12 {
+  width: 100%;
 }
